@@ -1,5 +1,7 @@
 2025-01-07  Zhengyi Fu  <i@fuzy.me>
 
+	* init.el: Add a consult-buffer-source for FireFox.
+
 	* site-lisp/exde.el: Enable exwm-ns.
 	* packages.el: Add package exwm-ns.
 
